Fix a lot of UI issues with cropping and screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,16 @@
 html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 @layer base {
