--- a/src/components/the-world.module.css
+++ b/src/components/the-world.module.css
@@ -5,7 +5,7 @@
 
 .ring {
   animation-name: spin; /* The name of the @keyframes rule */
-  animation-duration: 10s; /* How long the animation takes to complete one cycle */
+  animation-duration: 20s; /* How long the animation takes to complete one cycle */
   animation-iteration-count: infinite; /* How many times the animation should repeat (infinite for continuous) */
   animation-timing-function: linear; /* The speed curve of the animation (linear for a constant speed) */
 }
